[package]
name = "grox"
version = "0.1.0"
edition = "2021"

[lints.clippy]
# Useful to give context to return values especially in closures where
# the type may not be obvious
let_and_return = "allow"

[dependencies]
logos = "0.15"
chumsky = "0.9"
inkwell = { version = "0.5", features = ["llvm18-0-force-static"] }
# [dependencies.inkwell]
# package = "inkwell"
# version = "0.5.0"
# default-features = false
# features = [
#   "llvm18-0-prefer-static",
#   "target-x86",
#   "target-aarch64",
#   "target-riscv",
#   "target-loongarch",
# ]

[dev-dependencies]
pretty_assertions = "1.4"
